k8s/std20-deployment-ex.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: std20-nginx-deployment-ex
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: std20-nginx-web-ex
  template:
    metadata:
      labels:
        app: std20-nginx-web-ex
    spec:
      containers:
      - name: std20-nginx-container
        image: smile1101/nginx:1ba9fd153ee887a00738d0b6fd2c11f4ee70c141
        ports:
          - containerPort: 80
---


apiVersion: v1
kind: Service
metadata:
  name: std20-nginx-service-ex
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: std20-nginx-web-ex
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: std20-alb-basic-ex
  namespace: default
  annotations:    # 보안 그룹 등 AWS 에 대한 설정들
    alb.ingress.kubernetes.io/scheme: internet-facing # 외부 로드 밸런서 (ip부여) / internal(사설)
    alb.ingress.kubernetes.io/target-type: ip 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/transforms.std20-nginx-service-ex: >
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              {
                "regex": "^\\/nginx(?:\\/(.*))?$",
                "replace": "/$1"
              }
            ]
          }
        }
      ]
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: std20-nginx-service-ex
                port:
                  number: 80
